# HttpFramework

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/server/: CMakeLists.txt  HttpServer.cpp  HttpServer.hpp  main.cpp
http/: CMakeLists.txt
http/include/: exception.hpp
http/include/coroutine/: coroutine.h  coroutine.hpp
http/include/protocol/: http.hpp  http_request.hpp  http_response.hpp
http/include/server/: client_handler.hpp  connection.hpp  server.hpp  server_worker.hpp
http/include/utils/: file_descriptor.hpp  signal.hpp
http/src/: exception.cpp
http/src/coroutine/: coroutine.cpp
http/src/protocol/: http_request.cpp  http_response.cpp
http/src/server/: client_handler.cpp  connection.cpp  server.cpp  server_worker.cpp
http/src/utils/: file_descriptor.cpp  signal.cpp
log/: CMakeLists.txt
